reduce width to avoid overflow

--- a/frontend/src/app/meals/meal-card/meal-card.component.scss
+++ b/frontend/src/app/meals/meal-card/meal-card.component.scss
@@ -7,7 +7,7 @@ mat-card {
   float: left;
   padding-top: 10px;
   padding-left: 15px;
-  width: 95%;
+  width: 80%;
 }
 
 .right {
